# TesteQtBle

./: CMakeLists.txt  README.md  characteristicinfo.cpp  characteristicinfo.h  deviceinfo.cpp  deviceinfo.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  serviceinfo.cpp  serviceinfo.h
